--- a/public/css/player-style.css
+++ b/public/css/player-style.css
@@ -1,9 +1,3 @@
 #player-item-1, #player-item-2, #player-item-3 {
   /*border-bottom: 1px solid lightgray;*/
 }
-
-#sanity {
-  border-top: 1px solid black;
-  padding-top: 3%;
-  letter-spacing: 2px;
-}
